--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json && node ./scripts/flow/createFlowConfigs.js && node ./scripts/yarn/downloadReactIsForPrettyFormat.js",
     "debug-test": "yarn test --deprecated 'yarn test --debug'",
     "test": "node ./scripts/jest/jest-cli.js",
+    "test1": "node ./scripts/jest/jest-cli.js -- ./packages/react-dom/src/__tests__/ReactDOM-test-ps.js",
     "test-stable": "node ./scripts/jest/jest-cli.js --release-channel=stable",
     "test-www": "node ./scripts/jest/jest-cli.js --release-channel=www-modern",
     "test-classic": "node ./scripts/jest/jest-cli.js --release-channel=www-classic",
